[gd_scene load_steps=20 format=3 uid="uid://bmhxilkffhqa5"]

[ext_resource type="Script" uid="uid://bruqpv3kpycof" path="res://scenes/character/player.gd" id="1_7xvi4"]
[ext_resource type="Texture2D" uid="uid://cojm327d0qfvc" path="res://assets/characters/bodies/4.png" id="2_s20bt"]
[ext_resource type="PackedScene" uid="uid://fgbg7uc3rey6" path="res://scenes/ui/playerUI/playerUI.tscn" id="3_brb0h"]
[ext_resource type="AudioStream" uid="uid://p6udp7goe4do" path="res://assets/sfx/step.ogg" id="4_bflkw"]
[ext_resource type="Texture2D" uid="uid://bq2x0tji1tvkq" path="res://assets/characters/hands/hands-sheet.png" id="4_yjkcj"]
[ext_resource type="AudioStream" uid="uid://bdbqwftwm7jjj" path="res://assets/sfx/swing.ogg" id="5_xs70q"]
[ext_resource type="Script" uid="uid://bl0tm663e7r6k" path="res://scenes/character/player_status.gd" id="7_wmtbp"]
[ext_resource type="Script" uid="uid://dsnm03bgpmori" path="res://scenes/character/code.gd" id="8_5y66v"]
[ext_resource type="PackedScene" uid="uid://cfks0l8xsjo55" path="res://scenes/main/HUD/hydration_bar.tscn" id="9_g2qfr"]
[ext_resource type="Script" uid="uid://yd2wu1wfiudc" path="res://scenes/main/HUD/survival_bars.gd" id="10_xub24"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_khhcq"]
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cdkds"]
radius = 16.0

[sub_resource type="Animation" id="Animation_l6e13"]
resource_name = "punching"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MovingParts/Hands:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_xs70q")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_xs70q")
}],
"times": PackedFloat32Array(0.2, 0.5)
}
tracks/1/use_blend = true
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"punchCheckCollision"
}, {
"args": [],
"method": &"punchCheckCollision"
}]
}

[sub_resource type="Animation" id="Animation_oaeq3"]
resource_name = "stab"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MovingParts/HeldItem:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.785398, 0.785398, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MovingParts/HeldItem:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(19, 10), Vector2(10, 15), Vector2(25, -25), Vector2(19, 10)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_xs70q")
}],
"times": PackedFloat32Array(0.3)
}
tracks/2/use_blend = true
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"punchCheckCollision"
}]
}

[sub_resource type="Animation" id="Animation_ed68f"]
resource_name = "swing"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MovingParts/HeldItem:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -1.0472, 0.523599, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MovingParts/HeldItem:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(19, 10), Vector2(5, 10), Vector2(25, 2), Vector2(19, 10)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_xs70q")
}],
"times": PackedFloat32Array(0.5)
}
tracks/2/use_blend = true
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"punchCheckCollision"
}]
}

[sub_resource type="Animation" id="Animation_1ejc1"]
resource_name = "walking"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MovingParts/Hands:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_bflkw")
}],
"times": PackedFloat32Array(0.2)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MovingParts/HeldItem:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(16, 7), Vector2(23, 2), Vector2(19, 10), Vector2(16, 7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MovingParts/HeldItem:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.20944, -0.0698132, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4vloy"]
_data = {
&"punching": SubResource("Animation_l6e13"),
&"stab": SubResource("Animation_oaeq3"),
&"swing": SubResource("Animation_ed68f"),
&"walking": SubResource("Animation_1ejc1")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1pknd"]
properties/0/path = NodePath("AnimationPlayer:current_animation")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("MovingParts:rotation")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:hp")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:playerName")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:characterFile")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath(".:speed")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath(".:maxHP")
properties/6/spawn = true
properties/6/replication_mode = 2
properties/7/path = NodePath(".:attackDamage")
properties/7/spawn = true
properties/7/replication_mode = 2

[sub_resource type="Curve" id="Curve_s5j1r"]
_data = [Vector2(0.00279329, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Player" type="CharacterBody2D" groups=["damageable", "player"]]
script = ExtResource("1_7xvi4")

[node name="MovingParts" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="MovingParts"]
texture = ExtResource("2_s20bt")

[node name="Hands" type="Sprite2D" parent="MovingParts"]
unique_name_in_owner = true
texture = ExtResource("4_yjkcj")
offset = Vector2(6, 0)
hframes = 12
frame = 4

[node name="HeldItem" type="Sprite2D" parent="MovingParts"]
unique_name_in_owner = true
texture_filter = 1
offset = Vector2(16, 7)

[node name="HitArea" type="Area2D" parent="MovingParts"]
unique_name_in_owner = true

[node name="HitCollision" type="CollisionShape2D" parent="MovingParts/HitArea"]
unique_name_in_owner = true
position = Vector2(27, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_khhcq")

[node name="Equipment" type="Node2D" parent="MovingParts"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cdkds")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[node name="PlayerUi" parent="." instance=ExtResource("3_brb0h")]
offset_left = -50.0
offset_top = -50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4vloy")
}

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1pknd")
visibility_update_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="bloodParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.25
one_shot = true
speed_scale = 0.9
explosiveness = 1.0
randomness = 0.46
gravity = Vector2(0, 450)
initial_velocity_min = 25.25
initial_velocity_max = 267.67
angular_velocity_min = -225.45
angular_velocity_max = 370.91
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_s5j1r")
color = Color(1, 0.172549, 0.113725, 1)

[node name="EquipmentSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://cv01pg7l0b1q8")
spawn_path = NodePath("../MovingParts/Equipment")

[node name="MessageSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://cv8fbx1drgjch")
spawn_path = NodePath("../PlayerMessages")

[node name="PlayerMessages" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 50)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -100.0
offset_right = 70.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayerStatus" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_wmtbp")

[node name="Code" type="Node2D" parent="."]
z_index = 2
position = Vector2(218, -371)
script = ExtResource("8_5y66v")

[node name="CodeContainer" type="VBoxContainer" parent="Code"]
offset_left = 33.0
offset_top = 13.0
offset_right = 421.0
offset_bottom = 493.0
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="HauptCodeLabel" type="Label" parent="Code/CodeContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Haupt-Code"

[node name="CodeEdit" type="CodeEdit" parent="Code/CodeContainer"]
layout_mode = 2
size_flags_vertical = 3
scroll_smooth = true
scroll_past_end_of_file = true
highlight_current_line = true
symbol_tooltip_on_hover = true
gutters_draw_bookmarks = true
gutters_draw_line_numbers = true

[node name="ButtonCotainer" type="HBoxContainer" parent="Code/CodeContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="PlayButton" type="Button" parent="Code/CodeContainer/ButtonCotainer"]
layout_mode = 2
text = "Play"

[node name="StopButton" type="Button" parent="Code/CodeContainer/ButtonCotainer"]
layout_mode = 2
text = "Stop"

[node name="CodeDeleteButton" type="Button" parent="Code/CodeContainer/ButtonCotainer"]
layout_mode = 2
text = "Code löschen"

[node name="ActionsContainer" type="VBoxContainer" parent="Code"]
offset_left = 46.0
offset_top = 516.0
offset_right = 407.0
offset_bottom = 679.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Code/ActionsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BewegContainer" type="VBoxContainer" parent="Code/ActionsContainer/HBoxContainer"]
layout_mode = 2

[node name="BewegeLabel" type="Label" parent="Code/ActionsContainer/HBoxContainer/BewegContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Bewege"

[node name="ObenButton" type="Button" parent="Code/ActionsContainer/HBoxContainer/BewegContainer"]
layout_mode = 2
text = "oben"

[node name="LinksRechtsContainer" type="HBoxContainer" parent="Code/ActionsContainer/HBoxContainer/BewegContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="LinksButton" type="Button" parent="Code/ActionsContainer/HBoxContainer/BewegContainer/LinksRechtsContainer"]
layout_mode = 2
text = "links"

[node name="rechtsButton" type="Button" parent="Code/ActionsContainer/HBoxContainer/BewegContainer/LinksRechtsContainer"]
layout_mode = 2
text = "rechts"

[node name="UntenButton" type="Button" parent="Code/ActionsContainer/HBoxContainer/BewegContainer"]
layout_mode = 2
text = "unten"

[node name="VBoxContainer2" type="VBoxContainer" parent="Code/ActionsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="Code/ActionsContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Action"

[node name="attackeButton" type="Button" parent="Code/ActionsContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "attacke"

[node name="sageButton" type="Button" parent="Code/ActionsContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "sage"

[node name="VBoxContainer3" type="VBoxContainer" parent="Code/ActionsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Code/ActionsContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Funktion"

[node name="ItemList" type="ItemList" parent="Code/ActionsContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
auto_width = true
item_count = 1
item_0/text = "wiederhole 3 mal"

[node name="createFunction" type="Button" parent="Code/ActionsContainer"]
layout_mode = 2
text = "Erstelle Funktion"

[node name="PopupPanel" type="PopupPanel" parent="Code/ActionsContainer"]
title = "Funktionen"
size = Vector2i(600, 600)

[node name="CodeEdit" type="CodeEdit" parent="Code/ActionsContainer/PopupPanel"]
custom_minimum_size = Vector2(400, 400)
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 596.0
offset_bottom = 596.0
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 3
scroll_smooth = true
scroll_past_end_of_file = true
highlight_current_line = true
symbol_tooltip_on_hover = true
gutters_draw_bookmarks = true
gutters_draw_line_numbers = true

[node name="SurvivalBars" parent="." instance=ExtResource("9_g2qfr")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -626.0
offset_top = 246.0
offset_right = -334.0
offset_bottom = 345.0
grow_vertical = 0
script = ExtResource("10_xub24")

[connection signal="pressed" from="Code/CodeContainer/ButtonCotainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Code/CodeContainer/ButtonCotainer/CodeDeleteButton" to="Code" method="_on_code_delete_button_pressed"]
[connection signal="pressed" from="Code/ActionsContainer/HBoxContainer/BewegContainer/ObenButton" to="Code" method="_on_oben_button_pressed"]
[connection signal="pressed" from="Code/ActionsContainer/HBoxContainer/BewegContainer/LinksRechtsContainer/LinksButton" to="Code" method="_on_links_button_pressed"]
[connection signal="pressed" from="Code/ActionsContainer/HBoxContainer/BewegContainer/LinksRechtsContainer/rechtsButton" to="Code" method="_on_rechts_button_pressed"]
[connection signal="pressed" from="Code/ActionsContainer/HBoxContainer/BewegContainer/UntenButton" to="Code" method="_on_unten_button_pressed"]
[connection signal="pressed" from="Code/ActionsContainer/HBoxContainer/VBoxContainer2/attackeButton" to="Code" method="_on_attacke_button_pressed"]
[connection signal="pressed" from="Code/ActionsContainer/HBoxContainer/VBoxContainer2/sageButton" to="Code" method="_on_sage_button_pressed"]
[connection signal="item_clicked" from="Code/ActionsContainer/HBoxContainer/VBoxContainer3/ItemList" to="Code" method="_on_item_list_item_clicked"]
[connection signal="pressed" from="Code/ActionsContainer/createFunction" to="Code" method="_on_create_function_pressed"]
